# versioned_API

./: .gitignore  CMakeLists.txt  README.md
examples/using_v1/: CMakeLists.txt  using_v1.cpp
examples/using_v2/: CMakeLists.txt  using_v2.cpp
include/your_api_name_here/: bar.h  foo.h  version.h  versioned.h
include/your_api_name_here/v1/: bar.h  foo.h
include/your_api_name_here/v2/: bar.h  foo.h
private/your_api_name_here/implementation/: bar.h  foo.h  implementation.h
src/implementation/: bar.cpp  foo.cpp  versioned.cpp
src/v1/: bar.cpp  foo.cpp
src/v2/: foo.cpp
tests/v1/: CMakeLists.txt  bar_tests.cpp  foo_tests.cpp
tests/v2/: CMakeLists.txt  foo_tests.cpp
